<?xml version="1.0" encoding="utf-8"?>
<layout>
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".resumenFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resumen_Text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/defult_gap"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad_carnes_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/defult_gap"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_gravity="center"
            android:layout_marginTop="42dp"/>

    </FrameLayout>
</layout>